# tabular-data-auditor

./: .gitignore  Dockerfile  README.md  pyproject.toml
configs/: example.yaml
dataset_qa/: cli.py  config.py  report.py  rules.py  validator.py
examples/: data.csv
tests/: test_validator.py
