[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-qa-tool"
version = "0.1.0"
description = "Lightweight dataset QA CLI with YAML schemas"
authors = [
  { name = "Zane Baker", email = "zanebaker2001@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0.0",
  "pyyaml>=6.0",
  "pydantic>=1.10,<2.0",  # stick to v1-style validators for simplicity
  "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
